--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -32,6 +32,7 @@
                                 </div>
                             </article>
                             <% } %>
+                            <p>hello</p>
                     </div>
                     <% } else { %>
                         <h1>No Products Found!</h1>
