--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -8,7 +8,7 @@
             <main>
                 <% if (prods.length > 0) { %>
                     <div class="grid">
-                        <% for (let product of prods) { %> <!--prods is declared in the controller-->
+                        <% for (let product of prods) { %>
                             <article class="card product-item">
                                 <header class="card__header">
                                     <h1 class="product__title">
@@ -27,12 +27,11 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/products/<%= product.id %>/" class="btn">Details</a>
-                                        <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                                    <a href="/products/<%= product._id %>" class="btn">Details</a>
+                                    <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                                 </div>
                             </article>
                             <% } %>
-                            <p>hello</p>
                     </div>
                     <% } else { %>
                         <h1>No Products Found!</h1>
